[workspace]
resolver = "3"
members = ["apps/http-ironjudge", "apps/x-ironjudge", "libs/http-lib", "libs/redis-lib"]


[workspace.dependencies]
axum = "0.8.8"
sandbox-rs = "0.1.5"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15.7"
deadpool-redis = "0.23.0"