[workspace]
resolver = "3"
members = ["apps/http_ironjudge", "apps/x_ironjudge", "libs/http_lib", "libs/redis_lib", "libs/sandbox_lib", "libs/types_lib"]


[workspace.dependencies]
axum = "0.8.8"
sandbox-rs = "0.1.5"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15.7"
deadpool-redis = "0.23.0"
serde = { version = "1.0.228", features= ["derive"]}
uuid = { version = "1.21.0", features= ["v4"]}
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features=["cors","trace","timeout"]}
tracing = "0.1.44"
anyhow = "1.0.102"
tracing-subscriber = "0.3.22"
tempfile = "3.26.0"
libc = "0.2"
nix = { version = "0.30", features = ["process", "sched", "mount", "signal"] }
