[package]
name = "http_ironjudge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tower-http.workspace = true
http_lib = { path= "../../libs/http_lib"}
redis_lib = { path= "../../libs/redis_lib"}
tracing.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
