[package]
name = "http_ironjudge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tower-http.workspace = true
http_lib = { path= "../../libs/http_lib"}
redis_lib = { path= "../../libs/redis_lib"}
tracing.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
