[package]
name = "x_ironjudge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
redis.workspace = true
redis_lib = { version = "0.1.0", path = "../../libs/redis_lib" }
sandbox-rs.workspace = true
sandbox_lib = { version = "0.1.0", path = "../../libs/sandbox_lib" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
