[package]
name = "x_ironjudge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
redis.workspace = true
redis_lib = { version = "0.1.0", path = "../../libs/redis_lib" }
sandbox_lib = { version = "0.1.0", path = "../../libs/sandbox_lib" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
