[package]
name = "x_ironjudge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
redis.workspace = true
redis_lib.workspace = true
sandbox_lib.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
