[package]
name = "sandbox_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
libc.workspace = true
nix.workspace = true
redis_lib = { version = "0.1.0", path = "../redis_lib" }
seccompiler.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
types_lib = { version = "0.1.0", path = "../types_lib" }
uuid.workspace = true
